--- a/pv-model-html.html
+++ b/pv-model-html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Model Finansowy PV 1MW</title>
+    <title>Model Finansowy PV</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         * {
