--- a/hybrid-model.html
+++ b/hybrid-model.html
@@ -414,9 +414,32 @@
             font-size: 24px;
             color: #667eea;
         }
+
+        .back-to-panel-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            z-index: 9999;
+            font-size: 14px;
+            font-weight: 600;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            transition: all 0.3s;
+        }
+
+        .back-to-panel-btn:hover{
+            transform: translate(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+        }
     </style>
 </head>
 <body>
+    <button class="back-to-panel-btn" onclick="backToPanel()">← Powrót do panelu</button>
     <!-- Login Screen -->
     <div class="login-container" id="loginContainer">
         <h1>☀️🔋 Model Hybrydowy</h1>
@@ -1423,6 +1446,15 @@
                 updateCalculations();
             }
         };
+
+        function backToPanel() {
+            if (sessionStorage.getItem('energy_models_auth') === 'true') {
+                window.location.href = 'index.html';
+            } else {
+                window.location.href = 'index.html';
+            }
+            
+        }
     </script>
 </body>
 </html>
